# Auth_sprint_2

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  nginx.conf  nginx_jaeger_proxy.conf  otel-collector-config-spm.yaml  pyproject.toml
configs/: services.conf
content/: .env.example  Dockerfile  main.py  requirements.txt  requirements_dev.txt
content/api/: urls.py
content/broker/: rabbitmq.py
content/core/: settings.py
content/db/: base.py  elastic.py  redis.py
content/models/: genre.py  movies.py  person.py
content/schemas/: films.py  genres.py  persons.py  query_params.py
content/services/: base.py  films.py  genre.py  person.py  users.py
movies_admin/: .flake8  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  uwsgi.ini
movies_admin/config/: asgi.py  settings.py  urls.py
movies_admin/config/components/: database.py
movies_admin/movies/: admin.py  mixins.py  models.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.mo  django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.mo  django.po
movies_admin/movies/migrations/: 0001_initial.py
pumpkin/: .env.example  Dockerfile  create_admin.py  main.py  pytest.ini  requirements.txt
pumpkin/api/: urls.py
pumpkin/broker/: rabbitmq.py
pumpkin/core/: config.py
pumpkin/crud/: base_crud.py  users.py
pumpkin/models/: entity.py
pumpkin/schemas/: entity.py
pumpkin/services/: auth.py  base.py  users.py
pumpkin/utils/: auth.py
src/: .env.example  Dockerfile  conftest.py  main.py  pyproject.toml  requirements.txt
src/alembic/: env.py
src/amqp/: routers.py
src/api/: urls.py
src/broker/: rabbitmq.py
src/core/: config.py  logger.py
src/crud/: base_crud.py  login_history.py  permissions.py  roles.py  sections.py  social.py  users.py
src/db/: postgres.py  redis.py
src/exceptions/: users.py
src/models/: entity.py
src/schemas/: entity.py  social.py
src/services/: auth.py  base.py  roles.py  sections.py  users.py
src/tests/: test_auth.py  test_roles.py  (+2 more)
(+31 files in other folders)
