[tool.poetry]
name = "movies-admin"
version = "0.1.0"
description = ""
authors = ["Konstantin <89670253660@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg = {extras = ["binary"], version = "^3.2.3"}
python-dotenv = "^1.0.1"
django-split-settings = "^1.3.2"
uwsgi = "^2.0.27"


[tool.poetry.group.test.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
sqlfluff = "^3.2.4"
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
