[project]
name = "movies-admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.1.1",
    "django-split-settings==1.3.2",
    "faststream>=0.5.37",
    "psycopg[binary]==3.2.3",
    "python-dotenv==1.0.1",
    "starlette>=0.46.1",
    "uwsgi==2.0.27",
]
